--- a/internship-report.tex
+++ b/internship-report.tex
@@ -36,95 +36,6 @@
 \input{Sections/Intro}
 \input{Sections/Company}
 \input{Sections/PracticeTasks}
-\input{Sections/Technologies}
-
-\section{Rezultatai, išvados ir pasiūlymai}
-
-\textbf{Praktikos darbo privalumai}:
-\begin{enumerate}
-    \item Taikomos naujos technologijos.
-    \item Galimybė laisvai rinktis norimas užduotis.
-    \item Draugiška, padedanti komanda.
-\end{enumerate}
-\bigskip
-
-\textbf{Praktikos darbo trūkumai}:
-\begin{enumerate}
-    \item Praktikantai dažnai jaučiasi izoliuoti vienoje komandoje, baugu susipažinti su kitais praktikantais, praktikantų susitikimai nuotoliniai, kas pasunkina socializacijos aspektą.
-\end{enumerate}
-\bigskip
-
-\textbf{Įgytos žinios ir patirtis praktikos metu:}
-\begin{enumerate}
-    \item Įgyta patirties rašant programinį kodą Kotlin programavimo kalba.
-    \item Įgyta žinių apie “Jetpack Compose” Android įrankių rinkiniu skirtu kurti vartotojo sąsają.
-    \item Lavinau darbo komandoje gebėjimus ir darbo \enquote{Kanban} projektų valdymo metodo pagalba.
-    \item Įgyta patirties rašant kodą su švaraus ir kokybiško rašymo principais ir geriausiomis praktikomis. 
-    \item Įgyvendintas naujas funkcionalumas Android programėlėje.
-\end{enumerate}
-\bigskip
-
-\textbf{Pasiūlymai įmonei}:
-\begin{enumerate}
-    \item Įmonėje, šiuo metu, į praktikos pozicijas priimami tik programuotojai ir testuotojai. Būtų galima išplėsti praktikos pozicijų pasirinkimą, pridedant projektų vadovo, vartotojo sąsajos dizainerių pozicijas.
-    \item Atliekant praktiką, neteko susidurti su realių programinės įrangos, funkcionalumų įvertinimo iš vartotojų pusės. Bet 2,5 mėnesių, manau, yra per mažas laiko tarpas, kad įgyvendintas funkcionalumas pasiektų vartotojus.
-    \item Pirmą kartą pamačius projektą, buvo nelabai aišku, koks jo pilnas funkcionalumas, didžiąją dalį funkcionalumo atradau atlikdamas programinio kodo pakeitimus. Galima praktikantams, prieš pradedant rašyti kodą, pristatyti projekto funkcionalumą.
-\end{enumerate}
-% \begin{enumerate}
-%     % \item Grupinių projektinių darbų pristatymų metu per daug skiriama dėmesio sistemos funkcionalumui ir pristatymo sklandumui. Dėl to dažniausiai nukenčia sistemos testavimas -- jaunieji programuotojai nerašo testų, kadangi tai nėra vertinama pristatymo metu.
-% \end{enumerate}
-
-
-\textbf{Pasiūlymai universitetui}
-\begin{enumerate}
-    \item Praktikos metu teko dirbti prie mobiliųjų programėlių, jų funkcionalumo tobulinimo, universitete, mano žiniomis, privalomojo ar pasirenkamojo dalyko programų sistemų programoje nėra, tad būtų pravartu turėti bent vieną kursą, kuris leistų susipažinti ne tik su interneto svetainių kūrimu, bet ir su kitokia programų kūrimo paradigma.
-    \item Galimybė dirbti prie žymiai didesnio projekto. Paskaitų metu, dažniausiai dirbama prie nuo nulio kuriamų projektų, tačiau darbas prie didelės kodo bazės, kurios ankščiau studentas nematė, būtų naudinga patirtis, nes atėjus į darbovietę, studentas, dažniausiai negaus kurti projekto nuo nulio ir teks dirbti prie senesnio, ne su visomis geriausiomis programavimo praktikomis.
-    \item Pridėti vartotojo sąsajos testavimo modulį. Universitete testavimo kurse, buvo kalbama apie vienetinius, integracinius, prasiskverbimo testus, apie vartoto sąsają nebuvo užsiminta. Būtų galima supažindinti studentus su pagrindiniais mobiliųjų programėlių testavimo būdais, nes didžiąją dalį vartotojo sąsajos testavimo žinių įgavau tik praktikos metu. 
-\end{enumerate}
-
-\newpage
-
-\section{Priedai}
-\begin{figure}[htbp!]
-    \centering
-    \includegraphics[width=0.5\textwidth]{Images/PdfTronViewController.png}
-    \caption{PdfTronViewController ekranas}
-    \label{fig:pdfViewController screen}
-\end{figure}
-
-\begin{figure}[htbp!]
-    \centering
-    \includegraphics[width=0.8\textwidth]{Images/SideViewPdfViewController.png}
-    \caption{PdfTronViewController dekompozicija}
-    \label{img:pdfViewController}
-\end{figure}
-
-\begin{figure}[htbp!]
-    \centering
-    \includegraphics[width=0.6\textwidth]{Images/annotationList.png}
-    \caption{Anotacijų sąrašo komponentas}
-    \label{img:annotationList}
-\end{figure}
-
-\begin{figure}[htbp!]
-    \centering
-    \includegraphics[width=0.6\textwidth]{Images/buttonsView.png}
-    \caption{Projekto mygtukų langas}
-    \label{fig:buttonsView.png}
-\end{figure}
-
-\begin{figure}[htbp!]
-    \centering
-    \includegraphics[width=0.7\textwidth]{Images/pillAndroid.png}
-    \caption{Iššokančios žinutės komponentas}
-    \label{fig:pill}
-\end{figure}
-
-\begin{figure}[htbp!]
-    \centering
-    \includegraphics[width=0.5\textwidth]{Images/toastView.jpeg}
-    \caption{Iššokančios žinutės komponento pavyzdys programėlėje}
-    \label{fig:modelToastView}
-\end{figure}
+\input{Sections/Results}
+\input{Sections/Attachements}
 \end{document}
-
